[gd_scene load_steps=22 format=2]

[ext_resource path="res://Menu/Level/LevelMenu.gd" type="Script" id=1]
[ext_resource path="res://Menu/Resources/menu-background.png" type="Texture" id=2]
[ext_resource path="res://Menu/Score/time.png" type="Texture" id=3]
[ext_resource path="res://Menu/Level-pass/player.png" type="Texture" id=4]
[ext_resource path="res://Menu/Resources/stars.png" type="Texture" id=5]
[ext_resource path="res://Menu/Resources/high-score.png" type="Texture" id=6]
[ext_resource path="res://Menu/Level-pass/replay-unpressed.png" type="Texture" id=7]
[ext_resource path="res://Menu/Level-pass/replay-pressed.png" type="Texture" id=8]
[ext_resource path="res://Menu/Level-pass/map-unpressed.png" type="Texture" id=9]
[ext_resource path="res://Menu/Level-pass/map-pressed.png" type="Texture" id=10]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Menu/Resources/fredoka-one.ttf"

[sub_resource type="DynamicFont" id=2]
size = 130
outline_size = 5
outline_color = Color( 1, 0.454902, 0.454902, 1 )
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Menu/Resources/fredoka-one.ttf"

[sub_resource type="DynamicFont" id=4]
size = 60
outline_size = 2
outline_color = Color( 0.0352941, 0.447059, 0.588235, 1 )
font_data = SubResource( 3 )

[sub_resource type="DynamicFontData" id=5]
font_path = "res://Menu/Resources/fredoka-one.ttf"

[sub_resource type="DynamicFont" id=6]
size = 160
outline_size = 5
outline_color = Color( 0.878431, 0.545098, 0.105882, 1 )
font_data = SubResource( 5 )

[sub_resource type="DynamicFontData" id=7]
font_path = "res://Menu/Resources/fredoka-one.ttf"

[sub_resource type="DynamicFont" id=8]
size = 90
outline_size = 5
outline_color = Color( 0.878431, 0.545098, 0.105882, 1 )
font_data = SubResource( 7 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 600, 250 )

[sub_resource type="DynamicFontData" id=10]
font_path = "res://Menu/Resources/fredoka-one.ttf"

[sub_resource type="DynamicFont" id=11]
size = 80
outline_size = 3
outline_color = Color( 0.0352941, 0.447059, 0.588235, 1 )
font_data = SubResource( 10 )

[node name="LevelPassMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.22774
margin_right = 1.22778
script = ExtResource( 1 )

[node name="MenuBackground" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -720.5
margin_top = -473.5
margin_right = 720.5
margin_bottom = 473.5
rect_min_size = Vector2( 1440, 0 )
texture = ExtResource( 2 )
stretch_mode = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MenuBackground"]
margin_right = 1444.0
margin_bottom = 941.0

[node name="Level" type="Label" parent="MenuBackground/VBoxContainer"]
margin_right = 1444.0
margin_bottom = 158.0
rect_min_size = Vector2( 1440, 158 )
custom_fonts/font = SubResource( 2 )
text = "LEVEL 1"
align = 1

[node name="Scoreboard" type="HBoxContainer" parent="MenuBackground/VBoxContainer"]
margin_top = 162.0
margin_right = 1444.0
margin_bottom = 637.0

[node name="Summation" type="VBoxContainer" parent="MenuBackground/VBoxContainer/Scoreboard"]
margin_right = 560.0
margin_bottom = 475.0

[node name="Time" type="TextureRect" parent="MenuBackground/VBoxContainer/Scoreboard/Summation"]
margin_right = 560.0
margin_bottom = 150.0
rect_min_size = Vector2( 560, 0 )
texture = ExtResource( 3 )
stretch_mode = 4

[node name="TimeLabel" type="Label" parent="MenuBackground/VBoxContainer/Scoreboard/Summation/Time"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -68.0
margin_top = -52.0
margin_right = 176.0
margin_bottom = 75.0
custom_fonts/font = SubResource( 4 )
text = "00:00.00"
valign = 1

[node name="Plus" type="Label" parent="MenuBackground/VBoxContainer/Scoreboard/Summation"]
margin_top = 154.0
margin_right = 560.0
margin_bottom = 348.0
custom_fonts/font = SubResource( 6 )
text = "+"
align = 1

[node name="PlayersDead" type="HBoxContainer" parent="MenuBackground/VBoxContainer/Scoreboard/Summation"]
margin_top = 352.0
margin_right = 560.0
margin_bottom = 472.0
custom_constants/separation = 20
alignment = 1

[node name="PlayerIcon" type="TextureRect" parent="MenuBackground/VBoxContainer/Scoreboard/Summation/PlayersDead"]
margin_left = 39.0
margin_right = 173.0
margin_bottom = 120.0
texture = ExtResource( 4 )

[node name="PlayerScore" type="Label" parent="MenuBackground/VBoxContainer/Scoreboard/Summation/PlayersDead"]
margin_left = 193.0
margin_top = 5.0
margin_right = 521.0
margin_bottom = 115.0
custom_fonts/font = SubResource( 8 )
text = "x 3 = 30"

[node name="Line2D" type="Line2D" parent="MenuBackground/VBoxContainer/Scoreboard"]
position = Vector2( 10, -2.51758 )
points = PoolVector2Array( 562, 50, 562, 500 )
width = 4.0
default_color = Color( 1, 1, 1, 1 )
texture_mode = -14701714

[node name="Score" type="VBoxContainer" parent="MenuBackground/VBoxContainer/Scoreboard"]
margin_left = 564.0
margin_right = 1439.0
margin_bottom = 475.0
rect_min_size = Vector2( 780, 0 )

[node name="Stars" type="TextureRect" parent="MenuBackground/VBoxContainer/Scoreboard/Score"]
margin_right = 875.0
margin_bottom = 300.0
rect_min_size = Vector2( 600, 300 )
mouse_filter = 2
texture = SubResource( 9 )
stretch_mode = 4

[node name="HighScoreBackground" type="TextureRect" parent="MenuBackground/VBoxContainer/Scoreboard/Score"]
margin_top = 304.0
margin_right = 875.0
margin_bottom = 475.0
rect_min_size = Vector2( 875, 0 )
texture = ExtResource( 6 )
stretch_mode = 4

[node name="HighScore" type="Label" parent="MenuBackground/VBoxContainer/Scoreboard/Score/HighScoreBackground"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 11 )
text = "00:00:00"
align = 1
valign = 1

[node name="Line2D2" type="Line2D" parent="MenuBackground/VBoxContainer"]
position = Vector2( 10, 159.482 )
points = PoolVector2Array( 50, 525, 1380, 525 )
width = 4.0
default_color = Color( 1, 1, 1, 1 )
texture_mode = 0

[node name="Buttons" type="HBoxContainer" parent="MenuBackground/VBoxContainer"]
margin_top = 641.0
margin_right = 1444.0
margin_bottom = 941.0
rect_min_size = Vector2( 1440, 300 )

[node name="ReplayButton" type="TextureButton" parent="MenuBackground/VBoxContainer/Buttons"]
margin_right = 720.0
margin_bottom = 300.0
rect_min_size = Vector2( 720, 250 )
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
expand = true
stretch_mode = 3

[node name="MapButton" type="TextureButton" parent="MenuBackground/VBoxContainer/Buttons"]
margin_left = 724.0
margin_right = 1444.0
margin_bottom = 300.0
rect_min_size = Vector2( 720, 250 )
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
expand = true
stretch_mode = 3

[connection signal="pressed" from="MenuBackground/VBoxContainer/Buttons/ReplayButton" to="." method="_on_ReplayButton_pressed"]
[connection signal="pressed" from="MenuBackground/VBoxContainer/Buttons/MapButton" to="." method="_on_MapButton_pressed"]
