[gd_scene load_steps=16 format=2]

[ext_resource path="res://Menu/Level/LevelMenu.gd" type="Script" id=1]
[ext_resource path="res://Menu/Resources/menu-background.png" type="Texture" id=2]
[ext_resource path="res://Menu/Resources/stars.png" type="Texture" id=3]
[ext_resource path="res://Menu/Resources/high-score.png" type="Texture" id=4]
[ext_resource path="res://Menu/Resources/score-unpressed.png" type="Texture" id=5]
[ext_resource path="res://Menu/Resources/score-pressed.png" type="Texture" id=6]
[ext_resource path="res://Menu/Resources/play-unpressed.png" type="Texture" id=7]
[ext_resource path="res://Menu/Resources/play-pressed.png" type="Texture" id=8]
[ext_resource path="res://Menu/Level/cross-unpressed.png" type="Texture" id=9]
[ext_resource path="res://Menu/Level/cross-pressed.png" type="Texture" id=10]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Menu/Resources/fredoka-one.ttf"

[sub_resource type="DynamicFont" id=2]
size = 130
outline_size = 5
outline_color = Color( 1, 0.454902, 0.454902, 1 )
font_data = SubResource( 1 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 600, 250 )

[sub_resource type="DynamicFontData" id=4]
font_path = "res://Menu/Resources/fredoka-one.ttf"

[sub_resource type="DynamicFont" id=5]
size = 80
outline_size = 3
outline_color = Color( 0.0352941, 0.447059, 0.588235, 1 )
font_data = SubResource( 4 )

[node name="LevelMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="MenuBackground" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -720.5
margin_top = -473.5
margin_right = 720.5
margin_bottom = 473.5
rect_min_size = Vector2( 1440, 0 )
texture = ExtResource( 2 )
stretch_mode = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MenuBackground"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 3.0

[node name="Level" type="Label" parent="MenuBackground/VBoxContainer"]
margin_right = 1444.0
margin_bottom = 158.0
rect_min_size = Vector2( 1440, 158 )
custom_fonts/font = SubResource( 2 )
text = "LEVEL 1"
align = 1

[node name="Stars" type="TextureRect" parent="MenuBackground/VBoxContainer"]
margin_top = 162.0
margin_right = 1444.0
margin_bottom = 462.0
rect_min_size = Vector2( 1441, 300 )
mouse_filter = 2
texture = SubResource( 3 )
stretch_mode = 4

[node name="HighScoreBackground" type="TextureRect" parent="MenuBackground/VBoxContainer"]
margin_top = 466.0
margin_right = 1444.0
margin_bottom = 637.0
texture = ExtResource( 4 )
stretch_mode = 4

[node name="HighScore" type="Label" parent="MenuBackground/VBoxContainer/HighScoreBackground"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 5 )
text = "00:00:00"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MenuBackground/VBoxContainer"]
margin_top = 641.0
margin_right = 1444.0
margin_bottom = 941.0
rect_min_size = Vector2( 1440, 300 )

[node name="ScoreButton" type="TextureButton" parent="MenuBackground/VBoxContainer/HBoxContainer"]
margin_right = 720.0
margin_bottom = 300.0
rect_min_size = Vector2( 720, 250 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
expand = true
stretch_mode = 3

[node name="PlayButton" type="TextureButton" parent="MenuBackground/VBoxContainer/HBoxContainer"]
margin_left = 724.0
margin_right = 1444.0
margin_bottom = 300.0
rect_min_size = Vector2( 720, 250 )
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
expand = true
stretch_mode = 3

[node name="CrossButton" type="TextureButton" parent="MenuBackground"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -150.0
margin_top = 100.0
margin_bottom = 209.0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )

[connection signal="pressed" from="MenuBackground/VBoxContainer/HBoxContainer/ScoreButton" to="." method="_on_ScoreButton_pressed"]
[connection signal="pressed" from="MenuBackground/VBoxContainer/HBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="MenuBackground/CrossButton" to="." method="_on_CrossButton_pressed"]
